--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Sambuddha Adhikari",
   "license": "UNLICENSED",
   "dependencies": {
+    "@sendgrid/mail": "^7.1.1",
     "aws-sdk": "^2.683.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
@@ -20,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.9.16",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
