--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
+    "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "uuid": "^8.1.0"
   }
